--- a/PhotoAlbum/app/src/main/AndroidManifest.xml
+++ b/PhotoAlbum/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_sly_face_whit_smile"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_sly_face_whit_smile"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoAlbumActivity">
         <activity android:name=".MainActivity">
